// grpc_srv.proto
// rocnnet
//
// purpose:
// define service where rocnnet app acts as server

syntax = "proto3";

package visor;

message NodeId {
    string id = 1;
}

message NodeInfo {
    string title = 1;
    uint64 depth = 2;
    string derivId = 3;
}

message NodeData {
    repeated uint64 shape = 1;
    repeated double data = 2;
}

service GUIReceiver {
    rpc GetInfo (NodeId) returns (NodeInfo);

    rpc GetData (NodeId) returns (NodeData);
}
